Fix Bug #26976 (Can not access array elements using array indices) return index 0 as non iterable object update test